<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormPendaftaran">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="450px"
                android:layout_marginLeft="450px"
                android:text="@string/lDaftar"
                android:textSize="15pt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ednama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enama" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edalamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ealamat" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jk"
                android:textSize="24sp" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="351dp"
                android:layout_height="37dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="500px"
                    android:layout_height="wrap_content"
                    android:text="@string/rp1"
                    tools:layout_editor_absoluteX="78dp"
                    tools:layout_editor_absoluteY="393dp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="500px"
                    android:layout_height="wrap_content"
                    android:text="@string/rp2" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agama"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="133dp"
                android:layout_height="331dp">

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rp3" />

                <RadioButton
                    android:id="@+id/radioButton15"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rp4" />

                <RadioButton
                    android:id="@+id/radioButton16"
                    android:layout_width="122dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rp5" />

                <RadioButton
                    android:id="@+id/radioButton17"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rp6" />

                <RadioButton
                    android:id="@+id/radioButton19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp7" />

                <RadioButton
                    android:id="@+id/radioButton20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp8" />

                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rp9" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/eemail" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/laypa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/epass"
                    android:inputType="textPassword"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edrepass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/erepass"
                    app:passwordToggleEnabled="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnDr" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnBl" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>